--- a/css/main.css
+++ b/css/main.css
@@ -222,6 +222,11 @@ div.sidebar {
     .container {
         max-width: 850px;
     }
+
+    .caja-img p{
+        line-height: normal;
+        font-size: 14px;
+    }
 }
 
 @media screen and (min-width: 321px) and (max-width: 544px) {
@@ -423,6 +428,7 @@ hr{
     overflow: hidden;
     position: relative;
     text-align: center;
+    margin-bottom: 10px;
 }
 
 .caja-img:hover img{
@@ -442,10 +448,10 @@ hr{
 }
 
 .caja-img:hover p{
-    transform: translateY(-89%) translateZ(-100px);
+    transform: translateY(-98%) translateZ(-100px);
     transition: transform .2s ease-out, -webkit-transform .2s ease-out;
-    padding: 29px 18px;
-    max-width: 303px;
+    padding: 25px 20px;
+    margin: 0;
 }
 
 .caja-img p{
