--- a/css/main.css
+++ b/css/main.css
@@ -464,6 +464,14 @@ hr{
     color: white;
 }
 
+/* portafolio mobil*/
+
+.prueba{
+    background-image: url(../img/trabajo2.jpg);
+    width: 100%;
+    height: 100vh;
+}
+
 /*CONTACTO*/
 
 #contacto i{
