--- a/css/main.css
+++ b/css/main.css
@@ -67,8 +67,8 @@ section{
 li, a{text-decoration:none;color:inherit}
 li.logo {
     font-family: "Open Sans", sans-serif;
-    color: white;
-    background: #00BC99;
+    color: #e6e6e8;
+    background: #300032;
     font-size: 2.5em;
     text-align: center;
     transition: left ease-in-out .2s;
@@ -94,21 +94,21 @@ div.sidebar {
 	top: 0;
 	position: fixed;
     height: 100vh;
-    background: #1a1c1f;
+    background: #06000a;
     left: -215px;
     transition: left ease-in-out 0.9s;
     box-shadow: 1px 0px 4px rgba(0,0,0,.4);
 }
 
 .sidebar li.hover:not(:first-child){
-  color:#00BC99;
+  color:#e6e6e8;
   text-shadow:0 0 4px rgba(0, 188, 153, .3);
-  border-bottom:1px dotted #00BC99;
+  border-bottom:1px dotted #c43235;
 }
 
 .sidebar li:not(:first-child) {
     font-family: "Open Sans", sans-serif;
-    color: white;
+    color: #c43235;
     text-transform: uppercase;
     font-size: 18px;
     text-align: right;
@@ -119,8 +119,8 @@ div.sidebar {
 }
 
 .sidebar li:not(:first-child):hover {
-    color:#00BC99;
-    box-shadow:8px 0 0 rgba(0, 188, 153, .3);
+    color:#e6e6e8;
+    box-shadow:8px 0 0 #c43235;
     transition: box-shadow ease-in-out .3s;
 }
 
@@ -129,7 +129,7 @@ div.sidebar {
     height: 0;
     border-style: solid;
     border-width: 22.5px 0 22.5px 6px;
-    border-color: transparent transparent transparent #1a1c1f;
+    border-color: transparent transparent transparent #06000a;
     position: absolute;
     right: -6px;
     top: 0
@@ -541,6 +541,14 @@ width:110px;
     font-size: 30px;
 }
 
+.contacto a:hover{
+    color: #300032;
+}
+
+.icon {
+    box-shadow: 4px 4px 4px #c43235;
+
+}
 .contacto{
     white-space: normal;
 }
