--- a/css/main.css
+++ b/css/main.css
@@ -417,10 +417,6 @@ width:110px;
     height: 25px;
 }
 
-/*#portafolio input[type="checkbox"]:not(:checked):after{
-    background: blue;
-}*/
-
 #portafolio input[type="radio"]:before,
 #portafolio input[type="checkbox"]:before{
     content: "";
@@ -462,7 +458,6 @@ width:110px;
     transition: all .2s;
 }
 
-/*#portafolio [type="checkbox"]:not(:checked):after,*/
 #portafolio [type="checkbox"]:checked:after {
     content: '✔';
     position: relative;
@@ -476,8 +471,12 @@ width:110px;
 
 #portafolio .bg-inverse{
     width: 60%;
-    margin-left: auto;
-    height: 100%;
+    right: 2%;
+    z-index: 5;
+    position: absolute;
+    display: block;
+    border-radius: 0px 5px 5px 0px;
+    background: linear-gradient(to left top, rgba(48, 0, 50, 0.55), rgba(196, 50, 53, 0.55))!important;
 }
 
 #portafolio .tablet .bg-inverse{
@@ -485,7 +484,8 @@ width:110px;
 }
 
 #portafolio .phone .bg-inverse{
-    width: 100%;
+    width: 80%;
+    right: 3.4%;
 }
 
 #portafolio img{
@@ -507,25 +507,66 @@ width:110px;
     -webkit-transition:all .4s;
 }
 
-.device .laptop{
-    background-image: url(../img/trabajo2.jpg);
-}
-
-.device .phone{
-    background-image: url(../img/porta-mobile.png);
-}
-
-.device .tablet{
-    background-image: url(../img/blog-mobile.png);
-}
-
-.device .laptop, .phone, .tablet {
-    height:100%;
-    width:100%;
-    border-radius:5px;
-    -webkit-transition:all .5s;
+.carousel .car-lap-trello,.car-lap-blog,.car-lap-porta,.car-lap-user  {
+    height: 370px;
     background-size: cover;
+    border-radius: 5px;   
 }
+
+/*carousel laptop*/
+.carousel .car-lap-trello{
+    background-image: url(../img/trabajo3.jpg);     
+}
+
+.carousel .car-lap-porta{
+    background-image: url(../img/trabajo1.jpg);     
+}
+
+.carousel .car-lap-blog{
+    background-image: url(../img/trabajo2.jpg);     
+}
+
+.carousel .car-lap-user{
+    background-image: url(../img/trabajo4.jpg);     
+}
+
+/*carousel tablet*/
+
+#carousel-tablet .car-lap-trello{
+    background-image: url(../img/trabajo2.jpg);     
+}
+
+#carousel-tablet .car-lap-porta{
+    background-image: url(../img/porta-mobile.png);     
+}
+
+#carousel-tablet .car-lap-blog{
+    background-image: url(../img/blog-mobile.png);     
+}
+
+#carousel-tablet .car-lap-user{
+    background-image: url(../img/user-tablet.png);     
+}
+
+/*carousel cell*/
+
+#carousel-phone .car-lap-trello{
+    background-image: url(../img/trabajo2.jpg);     
+}
+
+#carousel-phone .car-lap-porta{
+    background-image: url(../img/porta-cell.png);     
+}
+
+#carousel-phone .car-lap-blog{
+    background-image: url(../img/blog-cell.png);     
+}
+
+#carousel-phone .car-lap-user{
+    background-image: url(../img/user-cell.png);     
+}
+
+/*case laptop portafolio*/
 
 #laptop:checked ~ .device .phone, #laptop:checked ~ .device .tablet  {
     display:none;
