--- a/css/main.css
+++ b/css/main.css
@@ -507,7 +507,7 @@ width:110px;
     -webkit-transition:all .4s;
 }
 
-.carousel .car-lap-trello,.car-lap-blog,.car-lap-porta,.car-lap-user  {
+.carousel .car-lap-trello,.car-lap-blog,.car-lap-port,.car-lap-user  {
     height: 370px;
     background-size: cover;
     border-radius: 5px;   
@@ -515,20 +515,51 @@ width:110px;
 
 /*carousel laptop*/
 .carousel .car-lap-trello{
-    background-image: url(../img/trabajo3.jpg);     
+    background-image: url(../img/trabajo2.jpg);     
 }
 
-.carousel .car-lap-porta{
+.carousel .car-lap-port{
     background-image: url(../img/trabajo1.jpg);     
 }
 
 .carousel .car-lap-blog{
-    background-image: url(../img/trabajo2.jpg);     
+    background-image: url(../img/trabajo3.jpg);     
 }
 
 .carousel .car-lap-user{
     background-image: url(../img/trabajo4.jpg);     
 }
+
+ /*carousel laptop hover */
+
+.car-lap-trello:hover .desc-trello-porta{
+    background: red;
+    opacity: 0.5;
+}
+
+.car-lap-blog:hover .desc-blog-porta{
+    background: red;
+    opacity: 0.5;
+}
+
+.car-lap-port:hover .desc-port-porta{
+    background: red;
+    opacity: 0.5;
+}
+
+.car-lap-user:hover .desc-user-porta{
+    background: red;
+    opacity: 0.5;
+}
+.desc-trello-porta, .desc-blog-porta, .desc-port-porta, .desc-user-porta{
+    opacity: 0;
+    position: absolute;
+    background: red;
+    white-space: normal;
+    padding: 15.7% 10%;
+    margin: 5%;
+}
+
 
 /*carousel tablet*/
 
@@ -536,7 +567,7 @@ width:110px;
     background-image: url(../img/trabajo2.jpg);     
 }
 
-#carousel-tablet .car-lap-porta{
+#carousel-tablet .car-lap-port{
     background-image: url(../img/porta-mobile.png);     
 }
 
@@ -554,7 +585,7 @@ width:110px;
     background-image: url(../img/trabajo2.jpg);     
 }
 
-#carousel-phone .car-lap-porta{
+#carousel-phone .car-lap-port{
     background-image: url(../img/porta-cell.png);     
 }
 
