--- a/css/main.css
+++ b/css/main.css
@@ -198,7 +198,7 @@ div.sidebar {
     text-shadow: 1px 1px 3px #06000a;
 }
 
-@media screen and (min-width: 0px) and (max-width: 1049px) {
+@media screen and (min-width: 0px) and (max-width: 1024px) {
     .titulo {
         top: 110px;
         max-width: 80%;
@@ -217,6 +217,16 @@ div.sidebar {
 
     section{
         height: 580px;
+    }
+
+    #portafolio #laptop:checked ~ .device {
+        height: 100%; 
+        width: 600px;
+        padding: 15px;
+    }
+
+    #festejo{
+        bottom: 30px;
     }
 }
 
@@ -508,7 +518,7 @@ width:110px;
 }
 
 .carousel .car-lap-trello,.car-lap-blog,.car-lap-port,.car-lap-user  {
-    height: 370px;
+    padding:7%;
     background-size: cover;
     border-radius: 5px;   
 }
@@ -553,15 +563,21 @@ width:110px;
 }
 .desc-trello-porta, .desc-blog-porta, .desc-port-porta, .desc-user-porta{
     opacity: 0;
-    position: absolute;
+    position: relative;
     background: red;
     white-space: normal;
-    padding: 15.7% 10%;
-    margin: 5%;
+    padding: 15% 5%;
+    transition: all .4s;
 }
 
 
 /*carousel tablet*/
+#carousel-tablet .car-lap-trello,
+#carousel-tablet .car-lap-port,
+#carousel-tablet .car-lap-blog,
+#carousel-tablet .car-lap-user{
+    height: 450px;
+}
 
 #carousel-tablet .car-lap-trello{
     background-image: url(../img/trabajo2.jpg);     
@@ -580,6 +596,13 @@ width:110px;
 }
 
 /*carousel cell*/
+
+#carousel-phone .car-lap-trello, 
+#carousel-phone .car-lap-port, 
+#carousel-phone .car-lap-blog, 
+#carousel-phone .car-lap-user{
+    height: 400px;
+}
 
 #carousel-phone .car-lap-trello{
     background-image: url(../img/trabajo2.jpg);     
