cambios de diseño portafolio

--- a/css/main.css
+++ b/css/main.css
@@ -494,11 +494,6 @@ h2 {
 
 /*PORTAFOLIO*/
 
-#portafolio .device button{
-    display: block;
-    margin-left: auto;
-}
-
 #portafolio input{
     width: 30px;
     height: 25px;
@@ -594,7 +589,7 @@ h2 {
     -webkit-transition:all .4s;
 }
 
-.carousel .car-lap-trello,.car-lap-blog,.car-lap-port,.car-lap-user  {
+.carousel .car-lap-trello,.car-lap-blog,.car-lap-eco,.car-lap-user  {
     padding:7%;
     background-size: cover;
     border-radius: 5px;   
@@ -602,66 +597,82 @@ h2 {
 
 /*carousel laptop*/
 .carousel .car-lap-trello{
-    background-image: url(../img/trabajo2.jpg);     
+    background-image: url(../img/trello.jpg);     
 }
 
-.carousel .car-lap-port{
-    background-image: url(../img/trabajo1.jpg);     
+.carousel .car-lap-eco{
+    background-image: url(../img/eco-lap.jpg);     
 }
 
 .carousel .car-lap-blog{
-    background-image: url(../img/trabajo3.jpg);     
+    background-image: url(../img/blog.jpg);     
 }
 
 .carousel .car-lap-user{
-    background-image: url(../img/trabajo4.jpg);     
+    background-image: url(../img/user.jpg);     
 }
 
  /*carousel laptop hover */
 
 .car-lap-trello:hover .desc-trello-porta{
-    background: red;
-    opacity: 0.5;
+    opacity: 1;
 }
 
 .car-lap-blog:hover .desc-blog-porta{
-    background: red;
-    opacity: 0.5;
+    opacity: 1;
 }
 
-.car-lap-port:hover .desc-port-porta{
-    background: red;
-    opacity: 0.5;
+.car-lap-eco:hover .desc-eco-porta{
+    opacity: 1;
 }
 
 .car-lap-user:hover .desc-user-porta{
-    background: red;
-    opacity: 0.5;
+    opacity: 1;
 }
-.desc-trello-porta, .desc-blog-porta, .desc-port-porta, .desc-user-porta{
+.desc-trello-porta, .desc-blog-porta, .desc-eco-porta, .desc-user-porta{
     opacity: 0;
     position: relative;
-    background: red;
+    background: rgba(230, 230, 232, 0.45);
     white-space: normal;
-    padding: 11.6% 5%;
     transition: all .4s;
+    width: 100%;
+    height: 245px;
 }
 
+.carousel-item h4,
+.carousel-item p{
+    background: rgba(6, 0, 10, 0.83);
+    color: white;
+    margin-bottom: 0;
+    position: relative;
+    top: 13%;
+    padding-left: 4%;
+    padding-right: 4%;
+}
+
+.carousel-item p{
+    box-shadow:  0px 2px 7px black;
+}
+/*
+.carousel-item p{
+    background: #06000a;
+    color: white;
+}*/
 
 /*carousel tablet*/
 #carousel-tablet .car-lap-trello,
-#carousel-tablet .car-lap-port,
+#carousel-tablet .car-lap-eco,
 #carousel-tablet .car-lap-blog,
 #carousel-tablet .car-lap-user{
     height: 450px;
 }
 
 #carousel-tablet .car-lap-trello{
-    background-image: url(../img/trabajo2.jpg);     
+    background-image: url(../img/trello.jpg);     
 }
 
-#carousel-tablet .car-lap-port{
-    background-image: url(../img/porta-mobile.png);     
+#carousel-tablet .car-lap-eco{
+    background-image: url(../img/eco-tablet.jpg);     
 }
 
 #carousel-tablet .car-lap-blog{
@@ -675,18 +686,18 @@ h2 {
 /*carousel cell*/
 
 #carousel-phone .car-lap-trello, 
-#carousel-phone .car-lap-port, 
+#carousel-phone .car-lap-eco, 
 #carousel-phone .car-lap-blog, 
 #carousel-phone .car-lap-user{
     height: 400px;
 }
 
 #carousel-phone .car-lap-trello{
-    background-image: url(../img/trabajo2.jpg);     
+    background-image: url(../img/trello.jpg);     
 }
 
-#carousel-phone .car-lap-port{
-    background-image: url(../img/porta-cell.png);     
+#carousel-phone .car-lap-eco{
+    background-image: url(../img/eco-cell.jpg);     
 }
 
 #carousel-phone .car-lap-blog{
@@ -711,7 +722,7 @@ h2 {
 }
 
 #laptop:checked ~ .device {
-    height: 445px;
+    height: 400px;
     width: 850px;
     padding: 15px;
 }
@@ -724,7 +735,7 @@ h2 {
     display:block;
     width:110%;
     height:9%;
-    background:#bdc3c7;
+    background: linear-gradient(143deg, #b0b1b1, #464545 62%);
     border-bottom-left-radius:10px;
     border-bottom-right-radius:10px;
 }
@@ -784,3 +795,41 @@ h2 {
 .contacto{
     white-space: normal;
 }
+
+/*animacion game over*/
+
+/*p {
+  font-family: 'VT323';
+  font-size:8em;
+  text-align:center;
+  animation: example .8s infinite;
+}
+
+@keyframes example {
+  0%{
+    color:lime; 
+    text-shadow:0 0 20px green;
+  }
+  25%{color:green; 
+      text-shadow:2px 2px 2px lime;         transform: translate(-2px,1px);
+  }
+  40%{color:lime; 
+    text-shadow:none; 
+    transform: translate(0,-0);
+  }
+  50%{color:green; 
+    text-shadow:5px 5px 2px blue, -5px -5px 2px red; 
+    transform: translate(0px,5px);
+  }
+  70%{color:lime; 
+    text-shadow:none; 
+    transform: translate(0,0);
+  }
+  80%{color:lime; 
+    text-shadow:0 0 20px green; 
+    transform: translate(-2px, 1px);
+  }
+  100%{color:lime; 
+    text-shadow:none;
+  }
+}*/
