--- a/css/main.css
+++ b/css/main.css
@@ -575,6 +575,10 @@ h2 {
     border-radius: 3px;
 }
 
+#portafolio a:hover{
+    text-decoration: none;
+}
+
 .device {
     position:relative;
     background:#333;
@@ -637,6 +641,7 @@ h2 {
     transition: all .4s;
     width: 100%;
     height: 245px;
+    padding-top: 2em;
 }
 
 .carousel-item h4,
@@ -653,11 +658,6 @@ h2 {
 .carousel-item p{
     box-shadow:  0px 2px 7px black;
 }
-/*
-.carousel-item p{
-    background: #06000a;
-    color: white;
-}*/
 
 /*carousel tablet*/
 #carousel-tablet .car-lap-trello,
