--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,6 @@ body{
     color: #06000a;
     font-family: 'Ubuntu', sans-serif;
     background: #e6e6e8;
-    /*overflow-y: hidden;*/
 }
 
 section{
@@ -152,7 +151,7 @@ div.sidebar {
     position: absolute;
     bottom: 1em; 
     margin: auto;
-    left: -300px;
+    left: -20%;
     background: url(../img/tuna_sprite.png) 0 0 no-repeat;
     animation: 
         walk-cycle 1s steps(12) 4,
@@ -513,7 +512,7 @@ h2 {
 }
 
 #portafolio input[type="radio"]:checked:after{
-    background: #e6e6e8;
+    background: #c43235;
     box-shadow: inset 1px 2px 4px rgba(6, 0, 10, 0.81);
     width: 13.7px;
     height: 13px;
@@ -523,7 +522,7 @@ h2 {
 
 #portafolio input[type="radio"]:after{
     content: "";
-    background: #c43235;
+    background: #e6e6e8;
     position: relative;
     width: 12px;
     height: 12px;
@@ -547,7 +546,7 @@ h2 {
     left: 6px;
     font-size: 18px;
     line-height: 0.8;
-    color: #e6e6e8;
+    color: #c43235;
     font-weight: bolder;
 }
 
