--- a/css/main.css
+++ b/css/main.css
@@ -6,19 +6,48 @@
 
 /*BODY SCROLL HORIZONTAL*/
 
+.grass3{
+    background: url(../img/grass3.png) repeat-x;
+    background-size: contain;
+    height: 17%;
+    bottom: 0px;
+    position: absolute;
+    width: 100%;
+    z-index: 5;
+}
+
+.presentacion .grass3, #contacto .grass3{
+    transform: rotatey(180deg);
+}
+
+.grass{
+    height: 27%;
+    bottom: 2%;
+    z-index: 4;
+    margin-left: 7%;
+    position: absolute;
+}
+
+.presentacion .grass, #contacto .grass{
+    right: 0;
+    transform: rotatey(180deg);
+    height: 35%;
+    bottom: 4%;
+}
 body{
 	white-space: nowrap;
     color: #06000a;
     font-family: 'Ubuntu', sans-serif;
     background: #e6e6e8;
+    overflow-x: hidden;
 }
 
 section{
     display: inline-block;
     width: 100vw;
     vertical-align: top;
-    /*overflow:hidden;*/
-    height: 100%;
+    position: relative;
+    height: 100vh;
 }
 
 /*menu mobile*/
@@ -224,10 +253,7 @@ div.sidebar {
     .ch-grid .col-lg-4 {
         height: 190px;
     }
-    /*section{
-        height: 580px;
-    }
-*/
+
     #portafolio #laptop:checked ~ .device {
         height: 100%; 
         width: 65%;
@@ -254,7 +280,7 @@ div.sidebar {
         padding: 0!important;
     }
     .presentacion .ego img{
-        width: 58%;
+        width: 58%!important;
         margin-bottom: 20px;
     }
     .presentacion .col-lg-6:last-child {
@@ -276,9 +302,21 @@ div.sidebar {
         width: 100%;
         display: block;
     }
+
+    .burguer {
+        background: linear-gradient(to right,#06000a 21%, rgba(255, 255, 255, 0.25) 74%, rgba(255, 255, 255, 0.12));
+        border-radius: 0 5px 5px 0;
+        border:none;
+        border-left: 1px solid #06000a;
+    }
 }
 
 @media screen and (min-width: 0px) and (max-width: 320px) {
+    h2{
+        font-size: 240%!important;
+        letter-spacing: 4px!important;
+    }
+
     .titulo {
         max-width: 120%;
     }
@@ -364,7 +402,7 @@ h1{
 h2 {
     color: #c43235;
     letter-spacing: 7.3px;
-    font-size: 43px;
+    font-size: 280%;
     text-shadow: -3px -1px 0px #e6e6e8;
     animation-name: parpadeo;
     animation-duration: 1s;
@@ -396,7 +434,7 @@ h2 {
     100% { opacity: 1.0; }
 }
 
-.presentacion img{
+.presentacion .ego img{
     width: 90%;
 }
 
@@ -793,6 +831,10 @@ h2 {
 
 .contacto{
     white-space: normal;
+}
+
+.contacto i{
+    cursor: pointer;
 }
 
 /*animacion game over*/
